<resources>
    <string name="app_name">Bored Games</string>
    <string name="home_linked_with">Linked with </string>
    <string name="home_toolbar_header">Bored Games</string>
    <string name="home_link_button">Link</string>
    <string name="home_play_button">Play</string>
    <string name="home_stats_button">Stats</string>
    <string name="home_profile_button">Profile</string>
    <string name="home_connect_to_button">Connect to</string>
    <string name="home_connection_successful">Connection Successful</string>
    <string name="home_accept_connections_button">Accept Connections</string>
    <string name="home_settings_button">Settings</string>
    <string name="home_et_device_name">Enter device name</string>
    <string name="home_link_cant_use_bluetooth">This device doesn\'t support bluetooth.</string>
    <string name="home_link_turn_on_bluetooth">Turn on bluetooth before linking.</string>
    <string name="home_link_device_is_now_discoverable">Device is now discoverable.</string>
    <string name="home_link_device_must_be_discoverable">Other devices can\'t discover your device.</string>
    <string name="play_this_player_pfp_description">Your Profile Picture</string>
    <string name="play_other_player_pfp_description">Other Player\'s Profile Picture</string>
    <string name="home_arent_paired_with">Device not paired with that device</string>
    <string name="home_arent_paired_with_any_devices">Device not paired with any other devices</string>
    <string name="play_ttt_board_description">Tic-Tac-Toe Board</string>
    <string name="play_this_player_x_or_o_description">Your Token</string>
    <string name="play_other_player_x_or_o_description">Other Player\'s Token</string>
    <string name="play_no_one_to_play_against">You\'re not connected to an opponent!</string>
    <string name="play_youre_player_one">You\'re Player 1</string>
    <string name="play_you">You</string>
    <string name="play_opponent">Opponent</string>
    <string name="play_leave_game">Leave the game?</string>
    <string name="play_are_you_sure_you_dont_want_to_play">Are you sure you don\'t want to play?</string>
    <string name="play_youre_player_two">You\'re Player 2</string>
    <string name="play_a1_button_description">The A 1 slot</string>
    <string name="play_a2_button_description">The A 2 slot</string>
    <string name="play_a3_button_description">The A 3 slot</string>
    <string name="play_b1_button_description">The B 1 slot</string>
    <string name="play_b2_button_description">The B 2 slot</string>
    <string name="play_b3_button_description">The B 3 slot</string>
    <string name="play_c1_button_description">The C 1 slot</string>
    <string name="play_c2_button_description">The C 2 slot</string>
    <string name="play_c3_button_description">The C 3 slot</string>
    <string name="profile_title">Your Profile</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_display_picture">Display Picture</string>
    <string name="profile_friends_list">Friends List</string>
    <string name="profile_theme">Theme</string>
    <string name="profile_set_profile">Set Profile</string>
    <string name="profile_toast_enter_display_name">Enter a display name</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hiscores_header">Leaderboard (W-D-L)</string>
    <string name="first">1st Place:</string>
    <string name="second">2nd Place:</string>
    <string name="third">3rd Place:</string>
    <string name="fourth">4th Place:</string>
    <string name="fifth">5th Place:</string>
    <string name="text_placeholder">Retrieving content...</string>
    <string name="hs_search_hint">Enter Display Name</string>
    <string name="hs_search_bt">Find Player</string>
    <string name="search_results">press \"Find Player\"!</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="player_not_found">Player not found</string>

</resources>