<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light"
    tools:context=".PlayActivity">

    <ImageView
        android:id="@+id/iv_play_other_player_pfp"
        android:layout_width="111dp"
        android:layout_height="99dp"
        android:contentDescription="@string/play_other_player_pfp_description"
        app:layout_constraintEnd_toEndOf="@+id/iv_play_other_player_token"
        app:layout_constraintTop_toTopOf="@+id/iv_play_this_player_pfp"
        app:srcCompat="@drawable/blank_profile_picture" />

    <ImageView
        android:id="@+id/iv_play_this_player_token"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/play_this_player_x_or_o_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ttt_x" />

    <ImageView
        android:id="@+id/iv_play_other_player_token"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/play_other_player_x_or_o_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_play_this_player_token"
        app:srcCompat="@drawable/ttt_o" />

    <ImageView
        android:id="@+id/iv_play_this_player_pfp"
        android:layout_width="111dp"
        android:layout_height="99dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/play_this_player_pfp_description"
        app:layout_constraintStart_toStartOf="@+id/iv_play_this_player_token"
        app:layout_constraintTop_toBottomOf="@+id/iv_play_this_player_token"
        app:srcCompat="@drawable/blank_profile_picture" />

    <ImageView
        android:id="@+id/iv_ttt_board"
        android:layout_width="308dp"
        android:layout_height="345dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/play_ttt_board_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_play_this_player_pfp"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tic_tac_toe_board" />

    <ImageButton
        android:id="@+id/ibt_b1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:contentDescription="@string/play_b1_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_c1"
        app:layout_constraintTop_toTopOf="@+id/ibt_b2"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_c1"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:background="@null"
        android:contentDescription="@string/play_c1_button_description"
        app:layout_constraintStart_toStartOf="@+id/iv_ttt_board"
        app:layout_constraintTop_toTopOf="@+id/ibt_c2"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_b2"
        android:layout_width="91dp"
        android:layout_height="98dp"
        android:background="@null"
        android:contentDescription="@string/play_b2_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_c2"
        app:layout_constraintTop_toTopOf="@+id/ibt_b3"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_c2"
        android:layout_width="94dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:contentDescription="@string/play_c2_button_description"
        app:layout_constraintStart_toEndOf="@+id/ibt_c1"
        app:layout_constraintTop_toTopOf="@+id/ibt_c3"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_b3"
        android:layout_width="96dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/play_b3_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_c3"
        app:layout_constraintTop_toBottomOf="@+id/ibt_a3"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_c3"
        android:layout_width="94dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/play_c3_button_description"
        app:layout_constraintEnd_toEndOf="@+id/iv_ttt_board"
        app:layout_constraintTop_toBottomOf="@+id/ibt_b3"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_a1"
        android:layout_width="96dp"
        android:layout_height="97dp"
        android:background="@null"
        android:contentDescription="@string/play_a1_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_b1"
        app:layout_constraintTop_toTopOf="@+id/ibt_a2"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_a2"
        android:layout_width="93dp"
        android:layout_height="95dp"
        android:background="@null"
        android:contentDescription="@string/play_a2_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_b2"
        app:layout_constraintTop_toTopOf="@+id/ibt_a3"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

    <ImageButton
        android:id="@+id/ibt_a3"
        android:layout_width="94dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/play_a3_button_description"
        app:layout_constraintStart_toStartOf="@+id/ibt_b3"
        app:layout_constraintTop_toTopOf="@+id/iv_ttt_board"
        app:srcCompat="@android:drawable/screen_background_light_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>