<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_home_settings"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_settings_button"
        app:layout_constraintStart_toStartOf="@+id/bt_home_profile"
        app:layout_constraintTop_toBottomOf="@+id/bt_home_profile" />

    <Button
        android:id="@+id/bt_home_profile"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_profile_button"
        app:layout_constraintStart_toStartOf="@+id/bt_home_stats"
        app:layout_constraintTop_toBottomOf="@+id/bt_home_stats" />

    <Button
        android:id="@+id/bt_home_link"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="76dp"
        android:text="@string/home_link_button"
        app:layout_constraintStart_toStartOf="@+id/tb_home"
        app:layout_constraintTop_toBottomOf="@+id/tb_home" />

    <Button
        android:id="@+id/bt_home_play"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="192dp"
        android:text="@string/home_play_button"
        app:layout_constraintStart_toStartOf="@+id/bt_home_link"
        app:layout_constraintTop_toBottomOf="@+id/bt_home_link" />

    <TextView
        android:id="@+id/tv_home_linked_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_linked_with"
        app:layout_constraintBottom_toTopOf="@+id/bt_home_play"
        app:layout_constraintStart_toStartOf="@+id/bt_home_link"
        app:layout_constraintTop_toBottomOf="@+id/bt_home_link"
        app:layout_constraintVertical_bias="0.489" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_toolbar_header"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tb_home"
        app:layout_constraintEnd_toEndOf="@+id/tb_home"
        app:layout_constraintStart_toStartOf="@+id/tb_home"
        app:layout_constraintTop_toTopOf="@+id/tb_home" />

    <Button
        android:id="@+id/bt_home_stats"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_stats_button"
        app:layout_constraintStart_toStartOf="@+id/bt_home_play"
        app:layout_constraintTop_toBottomOf="@+id/bt_home_play" />
</androidx.constraintlayout.widget.ConstraintLayout>