<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Spinner
        android:id="@+id/sp_profile_theme"
        android:layout_width="158dp"
        android:layout_height="20dp"
        android:entries="@android:array/emailAddressTypes"
        app:layout_constraintEnd_toEndOf="@+id/sp_profile_friends_list"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_theme" />

    <TextView
        android:id="@+id/tv_profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/profile_display_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_title" />

    <TextView
        android:id="@+id/tv_profile_display_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/profile_display_picture"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_display_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_display_name" />

    <TextView
        android:id="@+id/tv_profile_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/profile_theme"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_friends_list"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_friends_list" />

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_friends_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/profile_friends_list"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_display_picture"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_display_picture" />

    <EditText
        android:id="@+id/et_profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_profile_display_name"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_display_name" />

    <Spinner
        android:id="@+id/sp_profile_friends_list"
        android:layout_width="158dp"
        android:layout_height="20dp"
        android:entries="@android:array/emailAddressTypes"
        app:layout_constraintEnd_toEndOf="@+id/et_profile_display_name"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_friends_list" />

    <Button
        android:id="@+id/bt_profile_set_profile"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:layout_marginTop="104dp"
        android:text="@string/profile_set_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_profile_theme" />

    <ImageView
        android:id="@+id/iv_profile_display_picture"
        android:layout_width="108dp"
        android:layout_height="114dp"
        app:layout_constraintEnd_toEndOf="@+id/et_profile_display_name"
        app:layout_constraintStart_toStartOf="@+id/et_profile_display_name"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_display_picture"
        app:srcCompat="@drawable/blank_profile_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>